added simple and readme

--- a/lib/roundest_phoenix_web/components/layouts/app.html.heex
+++ b/lib/roundest_phoenix_web/components/layouts/app.html.heex
@@ -4,6 +4,7 @@
       round<span class="text-blue-300">est</span>
     </a>
     <div class="flex flex-row items-center gap-8">
+      <a href={~p"/simple"} class="hover:underline text-lg">simple version</a>
       <a href={~p"/results"} class="hover:underline text-lg">results</a>
     </div>
   </nav>
